--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     font-family: sans-serif;
 }
 body{
-    background-image: url(/dark_city.webp);
+    background-image: url(dark_city.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
